# pjm-translator

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.ai/: shared.md
.ai/agents/: data-engineer.md  developer.md  mlops.md  reviewer.md
.ai/context/: project.md
.ai/standards/: coding.md  testing.md
.ai/workflows/: research-plan-act.md
.cursor/rules/: main.mdc
.github/: copilot-instructions.md
docs/mnist-translator/: bibliografia.bib  praca.tex  urdpl.cls
docs/mnist-translator/appendix/: statement-A.tex
docs/mnist-translator/chapters/: LabSI.tex  cel_projektu.tex  chapter001.tex  chapter002.tex  chapter003.tex  chapter005.tex  chapter007.tex  chapter008.tex  eksperymenty_wyniki.tex  implementacja.tex  instrukcja_uruchomienia.tex  opis_implementacja.tex  wnioski.tex  wyniki_analiza.tex
src/data/: extract.py  ingest.py  protocol.py
src/inference/: camera.py  csv_source.py  predict.py  protocol.py
src/model/: evaluate.py  train.py
src/model/classifiers/: __init__.py  cnn.py  random_forest.py  svc.py
tests/: conftest.py
tests/data/: test_extract.py  test_ingest.py  test_split.py
tests/model/: test_train.py
